--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,36 @@
 * {
     box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 5px;
 }
 
 body {
     background-color: #d9dcd6;
+    box-sizing: border-box;
+    border: 1px solid #2a607c;
+    border-radius: 20px;
+    padding: 10px;
+    margin: 10px;
 }
 
 .header {
-    padding: 20px;
+    
+    padding-top: 15px;
+    margin-right: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #2a607c;
     color: #ffffff;
 }
 
 .header h1 {
     display: inline-block;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 48px;
 }
 
 .header h1 .seo {
     color: #d9dcd6;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 }
 
 .header div {
@@ -34,11 +43,14 @@ body {
 
 .header div ul {
     list-style-type: none;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 }
 
 .header div ul li {
     display: inline-block;
     margin-left: 25px;
+
 }
 
 a {
@@ -53,10 +65,13 @@ p {
 .hero {
     height: 800px;
     width: 100%;
+    padding-left: 5px;
+    padding-right: 5px;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+
 }
 
 .float-left {
@@ -76,6 +91,7 @@ p {
 }
 
 .benefits {
+    margin-top: 20px;
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -89,6 +105,7 @@ p {
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
+;
 }
 
 .benefit-brand {
